# deathbycaptcha-api-client-python

./: .gitignore  .gitlab-ci.yml  AGENTS_CHANGELOG.md  AGENT_USAGE.md  AI_AGENTS_INTEGRATION.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  schema.json  setup.cfg
.github/workflows/: tests.yml
agents/: README.md  agent_config.example.json  agent_wrapper.py  example_json_api.py  example_langchain.py  example_tool_use.py
examples/: example.AmazonWaf.py  example.Atb.py  example.Audio.py  example.Capy.py  example.Cutcaptcha.py  example.Datadome.py  example.Friendly.py  example.Geetest_v3.py  example.Geetest_v4.py  example.Lemin.py  example.Mtcaptcha.py  example.Normal_Captcha.py  example.Siara.py  example.Tencent.py  example.Textcaptcha.py  example.Turnstile.py  example.reCAPTCHA_Coordinates.py  example.reCAPTCHA_Image_Group.py  example.reCAPTCHA_v2.py  example.reCAPTCHA_v2_enterprise.py  example.reCAPTCHA_v3.py  get_balance.py
src/deathbycaptcha/: __init__.py  fast_imghdr.py
tests/: README.md  __init__.py  test_constants.py  test_image_detection.py  test_imports.py  test_integration_balance.py
