[metadata]
name = deathbycaptcha-official
version = 4.7.0
author = DBC Developers Team
author_email = deathbycaptcha@protonmail.com
description = Official DeathByCaptcha API Client Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deathbycaptcha/deathbycaptcha-api-client-python
project_urls =
    Bug Tracker = https://github.com/deathbycaptcha/deathbycaptcha-api-client-python/issues
    repository = https://github.com/deathbycaptcha/deathbycaptcha-api-client-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    requests>=2.25.1
    simplejson>=3.17.2

[options.packages.find]
where = src
